--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpeningTime": {
+    "StartAt": "00:00:00",
+    "FinishAt": "23:59:59"
+  }
 }
