refatorando o end point project na api e chamando os metodos da camada application

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "OpeningTime": {
-    "StartAt": "00:00:00",
-    "FinishAt": "23:59:59"
-  }
+  "AllowedHosts": "*"
 }
