--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevFreelaCs": "Data Source=DESKTOP-EOK5HPQ\\SQLEXPRESS;Initial Catalog=DevFreela;Integrated Security=True;"
+  }
 }
