Implementando o padrão CQRS, criando todos os metodos command e tirando do services e passando cada um para sua responsabilidade no command

--- a/DevFreela.Application/DevFreela.Application.csproj
+++ b/DevFreela.Application/DevFreela.Application.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\Infrastructure\DevFreela.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\GetAllSkills\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
 </Project>
