criando jwt token

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevFreelaCs": "Data Source=DESKTOP-EOK5HPQ\\SQLEXPRESS;Initial Catalog=DevFreela;Integrated Security=True;"
+  },
+  "Jwt": {
+    "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
+    "Issuer": "DevFreela",
+    "Audience": "ClientFreelancers"
   }
 }
