Refatorando o payment Service e designando o processo de pagamento para um microsserviço

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -13,5 +13,8 @@
     "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
     "Issuer": "DevFreela",
     "Audience": "ClientFreelancers"
+  },
+  "Service": {
+    "Payments": "https://localhost:6001"
   }
 }
