colocando IPaymentService no scopo do program

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -14,7 +14,7 @@
     "Issuer": "DevFreela",
     "Audience": "ClientFreelancers"
   },
-  "Service": {
+  "Services": {
     "Payments": "https://localhost:6001"
   }
 }
