Migrando para o NET 8 e atualizando todos os pacotes Microsoft para o NET 8

--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevFreelaCs": "Data Source=DESKTOP-EOK5HPQ\\SQLEXPRESS;Initial Catalog=DevFreela;Integrated Security=True;"
+    "DevFreelaCs": "Data Source=DESKTOP-EOK5HPQ\\SQLEXPRESS;Initial Catalog=DevFreela;Integrated Security=True;TrustServerCertificate=True;"    
   },
   "Jwt": {
     "Key": "Está É Minha Senha Secreta Para Proteger Meus Tokens!",
